# marrow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  marrow.sln
Benchmark/: BaseSessionLogic.cpp  BaseSessionLogic.h  Benchmark.vcxproj  Benchmark.vcxproj.filters  CMakeLists.txt  LogonSessionLogic.cpp  LogonSessionLogic.h  README.md  SessionCodec.h  SessionEvents.h  SessionLogic.h  SessionPool.cpp  SessionPool.h  main.cpp
Collocates/: CMakeLists.txt  Collocates.vcxproj  Collocates.vcxproj.filters  InitParameter.cpp  InitParameter.h  main.cpp
Correspond/: CMakeLists.txt  ControlPacket.h  Correspond.vcxproj  Correspond.vcxproj.filters  CorrespondServer.cpp  CorrespondServer.h  DispatchEngineSink.cpp  DispatchEngineSink.h  GlobalInfoManager.cpp  GlobalInfoManager.h  InitParameter.cpp  InitParameter.h  README.md  ServiceUnits.cpp  ServiceUnits.h  main.cpp
GameService/: AndroidUserItem.cpp  AndroidUserItem.h  AndroidUserManager.cpp  AndroidUserManager.h  CMakeLists.txt  GamePropertyManager.cpp  GamePropertyManager.h  GameService.vcxproj  GameService.vcxproj.filters  GameServiceHead.h  README.md  ServerUserManager.cpp  ServerUserManager.h  UserTaskManager.cpp  UserTaskManager.h
KernelEngine/: AsyncEventHub.cpp  AsyncEventHub.h  CMakeLists.txt  DataBaseAide.cpp  DataBaseAide.h  DataBaseEngine.cpp  DataBaseEngine.h  KernelEngine.vcxproj  KernelEngine.vcxproj.filters  KernelEngineHead.h  README.md  TCPNetworkEngine.cpp  TCPNetworkEngine.h  TCPSocketService.cpp  TCPSocketService.h  TimerEngine.cpp  TimerEngine.h  TraceService.cpp  TraceService.h  nanodbc.cpp  nanodbc.h
LogonServer/: CMakeLists.txt  ControlPacket.h  DataBaseEngineSink.cpp  DataBaseEngineSink.h  DataBasePacket.h  DispatchEngineSink.cpp  DispatchEngineSink.h  GamePropertyListManager.cpp  GamePropertyListManager.h  InitParameter.cpp  InitParameter.h  LogonServer.cpp  LogonServer.h  LogonServer.vcxproj  LogonServer.vcxproj.filters  README.md  ServerListManager.cpp  ServerListManager.h  ServiceUnits.cpp  ServiceUnits.h  main.cpp
MainServer/: .gitignore  CMakeLists.txt  README.md
MainServer/Benchmark/: BaseSessionLogic.cpp  BaseSessionLogic.h  CMakeLists.txt  LogonSessionLogic.cpp  LogonSessionLogic.h  SessionCodec.h  SessionEvents.h  SessionPool.cpp  SessionPool.h  main.cpp
MainServer/ChatServer/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatServerHead.h  ControlPacket.h  DataBaseEngineSink.cpp  DataBaseEngineSink.h  DataBasePacket.h  InitParameter.cpp  InitParameter.h  ServerUserManager.cpp  ServerUserManager.h  ServiceUnits.cpp  ServiceUnits.h  main.cpp
MainServer/Collocates/: CMakeLists.txt  InitParameter.cpp  InitParameter.h  README.md  ServerParameter.ini  main.cpp
MainServer/Correspond/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  ControlPacket.h  CorrespondHead.h  CorrespondServer.h  GlobalInfoManager.cpp  GlobalInfoManager.h  InitParameter.cpp  InitParameter.h  README.md  ServiceUnits.cpp  ServiceUnits.h  main.cpp
MainServer/Dependencies/: build_vcpkg.bat  build_vcpkg.ps1  build_vcpkg.sh
MainServer/GameServer/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  ControlPacket.h  DBCorrespondManager.cpp  DBCorrespondManager.h  DataBaseEngineSink.cpp  DataBaseEngineSink.h  DataBasePacket.h  DistributeManager.cpp  DistributeManager.h  GameServer.cpp  GameServer.h  GameServerHead.h  InitParameter.cpp  InitParameter.h  PersonalRoomServiceHead.h  SensitiveWordsFilter.cpp  SensitiveWordsFilter.h  ServerListManager.cpp  ServerListManager.h  ServiceUnits.cpp  ServiceUnits.h  StockManager.cpp  StockManager.h  TableFrame.cpp  TableFrame.h  main.cpp
MainServer/GameService/: AndroidUserItem.cpp  AndroidUserManager.cpp  AndroidUserManager.h  CMakeLists.txt  GamePropertyManager.cpp  GameServiceHead.h  ServerUserManager.cpp  ServerUserManager.h  UserTaskManager.cpp  UserTaskmanager.h  androiduseritem.h  gamepropertymanager.h
MainServer/GlobalDefine/: Define.h  Macro.h  Module.h  Packet.h  PacketAide.h  Platform.h  Property.h  README.md  RightDefine.h  ServerRule.h  Struct.h  Typedef.h
MainServer/KernelEngine/: AttemperEngine.cpp  AttemperEngine.h  CMakeLists.txt  DataBaseAide.cpp  DataBaseAide.h  DataBaseEngine.cpp  DataBaseEngine.h  EventDelegate.h  KernelEngineHead.h  README.md  TCPNetworkEngine.cpp  TCPNetworkEngine.h  TCPSocketService.cpp  TCPSocketService.h  TimerEngine.cpp  TimerEngine.h  TraceService.cpp  TraceService.h  nanodbc.cpp  nanodbc.h
MainServer/LogonServer/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  ControlPacket.h  DataBaseEngineSink.cpp  DataBaseEngineSink.h  DataBasePacket.h  GamePropertyListManager.cpp  GamePropertyListManager.h  InitParameter.cpp  InitParameter.h  LogonServer.cpp  LogonServer.h  LogonServerHead.h  README.md  ServerListManager.cpp  ServerListManager.h  ServiceUnits.cpp  ServiceUnits.h  main.cpp
MainServer/MatchService/: CMakeLists.txt  DistributeManager.cpp  DistributeManager.h  ImmediateGroup.cpp  ImmediateGroup.h  ImmediateMatch.cpp  ImmediateMatch.h  LockTimeMatch.cpp  LockTimeMatch.h  MatchServiceHead.h  MatchServiceManager.cpp  MatchServiceManager.h  TableFrameHook.cpp  TableFrameHook.h
MainServer/MessageDefine/: CMD_ChatServer.h  CMD_Commom.h  CMD_Correspond.h  CMD_GameServer.h  CMD_LogonServer.h  IPC_GameFrame.h
MainServer/ModuleManager/: CMakeLists.txt  MatchInfoManager.cpp  MatchInfoManager.h  ModuleDBParameter.cpp  ModuleDBParameter.h  ModuleInfoManager.cpp  ModuleInfoManager.h  ModuleManagerHead.h  ServerInfoManager.cpp  ServerInfoManager.h  ServerItemManager.cpp  (+1 more)
ServiceCore/: CMakeLists.txt  README.md  ServiceCore.vcxproj  ServiceCore.vcxproj.filters  ServiceCoreHead.h  SimpleIni.h  StringUtils.cpp  StringUtils.h  WHBase64.cpp  WHBase64.h  WHCommandLine.cpp  WHCommandLine.h  WHDataLocker.cpp  WHDataLocker.h  WHDataQueue.cpp  WHDataQueue.h  WHEncrypt.cpp  WHEncrypt.h  WHIniData.cpp  WHIniData.h  WHMD5CheckSum.cpp  WHMD5CheckSum.h  WHService.cpp  WHService.h  WHSha1.cpp  WHSha1.h  WHThread.cpp  WHThread.h  cmdline.h
SubGames/: CMakeLists.txt
(+1802 files in other folders)
